Fixed import data for GeoPulse, save badges to DB